# FastFlowLM

./: README.md
.github/workflows/: debian-portable.yml
assets/superseded/: LICENSE_BINARY.txt
docs/: index.md  models.md  news.md  team.md
docs/docs/: install_lin.md
docs/docs/benchmarks/: gemma4_results.md  index.md  qwen3.6_results.md
docs/docs/instructions/: cli.md
docs/docs/models/: qwen.md
hrx-integration/: README.md
hrx-integration/bench/: README.md  build.sh  flm_hrx_runlist_bench.cpp
hrx-integration/scripts/: build.sh  run.sh
hrx-integration/src/: hrx_xadx_builder.hpp  xrt_coreutil_shim.cpp
src/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  flm-wrapper.sh.in  home_install.sh  home_install.sh~  model_list.json
src/common/: utils.cpp
src/common/AutoEmbeddingModel/: auto_embedding_model.cpp  modeling_gemma_embedding.cpp
src/common/AutoModel/: automodel.cpp  modeling_gemma3.cpp  modeling_gemma3_text.cpp  modeling_gemma4e.cpp  modeling_gemma4e_audio.cpp  modeling_gemma4e_image.cpp  modeling_gpt_oss.cpp  modeling_lfm2.cpp  modeling_llama3.cpp  modeling_nanbeige.cpp  modeling_phi4.cpp  modeling_qwen2.cpp  modeling_qwen2vl.cpp  modeling_qwen3.cpp  modeling_qwen3_5_omni.cpp  modeling_qwen3_5_omni_image.cpp  modeling_qwen3_5vl.cpp  modeling_qwen3_6_moe.cpp  modeling_qwen3_6_moe_image.cpp  modeling_qwen3vl.cpp
src/common/image_process_utils/: imageproc.cpp  imageprocAVX512.cpp
src/common/whisper/: modeling_whisper.cpp
src/include/: buffer.hpp  causal_lm.hpp  prompt_cache.hpp
src/include/AutoEmbeddingModel/: all_embedding_model.hpp  auto_embedding_model.hpp  modeling_gemma_embedding.hpp
src/include/AutoModel/: all_models.hpp  automodel.hpp  modeling_gemma3.hpp  modeling_gemma3_text.hpp  modeling_gemma4e.hpp  modeling_gpt_oss.hpp  modeling_lfm2.hpp  modeling_llama3.hpp  modeling_nanbeige.hpp  modeling_phi4.hpp  modeling_qwen2.hpp  modeling_qwen2vl.hpp  modeling_qwen3.hpp  modeling_qwen3_5_omni.hpp  modeling_qwen3_5vl.hpp  modeling_qwen3_6_moe.hpp  modeling_qwen3vl.hpp
src/include/hrx_cpp/: hrx_cpp.hpp  hrx_xadx_builder.hpp
src/include/models/gemma/: gemma_npu.hpp
src/include/models/gemma4e/: gemma4e_npu.hpp
src/include/models/gemma_text/: gemma_text_npu.hpp
src/include/models/gpt_oss/: gpt_oss_npu.hpp
src/include/models/lfm2/: lfm2_npu.hpp
src/include/models/llama/: llama_npu.hpp
src/include/models/nanbeige/: nanbeige_npu.hpp
src/include/models/phi4/: phi4_npu.hpp
src/include/models/qwen2/: qwen2_npu.hpp
src/include/models/qwen2vl/: qwen2vl_npu.hpp
src/include/models/qwen3/: qwen3_npu.hpp
src/include/models/qwen3_5_omni/: qwen3_5_omni.hpp
src/include/models/qwen3_5vl/: qwen3_5vl_npu.hpp
src/include/models/qwen3_6_moe/: qwen3_6_moe_npu.hpp
src/include/models/qwen3vl/: qwen3vl_npu.hpp
src/include/npu_utils/: npu_instr_utils.hpp  npu_utils.hpp
src/include/npu_utils/instr_utils/: npu_cmd.hpp
src/include/utils/: json_check.hpp  vm_args.hpp
src/include/whisper/: modeling_whisper.hpp
src/inno/: flm.iss
src/lib/: gemma4e_npu.lib  gemma_npu.lib  gemma_text_npu.lib  gpt_oss_npu.lib  lfm2_npu.lib  llama_npu.lib  nanbeige_npu.lib  phi4_npu.lib  qwen2_npu.lib  qwen2vl_npu.lib  qwen3_5vl_npu.lib  qwen3_npu.lib  qwen3vl_npu.lib
src/pull/: download_model.cpp
src/runner/: runner.cpp  runner.hpp
src/server/: rest_handler.cpp  rest_handler.hpp  server.cpp  streaming_ostream_openai.hpp
src/src/: benchmarking.hpp  main.cpp
src/test/gemma4e_npu/: Makefile
src/test/qwen3_5_omni_npu/: test.cpp
src/test/qwen3_6_moe_npu/: CMakeLists.txt  Makefile  activate.sh  test.cpp  test.sh
src/xclbins/Qwen3.6-35B-A3B-NPU2/: GateDeltaNet_prefill.xclbin  attn.xclbin  dequant.xclbin  dequant_mm.xclbin  layer.xclbin  lm_head.xclbin  mm.xclbin
